# cpp_unit_test_gen

./: CMakeCache.txt  CMakeLists.txt  README.md  generate_tests.py  instructions.yaml  main.cpp
tests/: test_main.cpp
